# backend-medduzen-internship

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: cd.yml  ci.yml  pipeline.yml
backend/apps/company/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/company/migrations/: 0001_initial.py  0002_alter_company_name.py  0003_companyinvitation.py  0004_alter_companyinvitation_status.py  0005_alter_companyinvitation_options.py  0005_company_admins.py  0006_alter_companyinvitation_unique_together.py
backend/apps/company/views/: __init__.py  company_invitation_viewset.py  company_request_viewset.py  (+1 more)
backend/apps/healthcheck/: apps.py  views.py
backend/apps/notification/: apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/apps/quiz/: admin.py  apps.py  enums.py  filters.py  models.py  pagination.py  permissions.py  schemas.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/apps/shared/: apps.py  models.py  utils.py
backend/apps/tests/: test_setup.py  test_user.py  test_user_serializer.py
backend/apps/timestamp/: apps.py
backend/apps/users/: admin.py  apps.py  email.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py
locale/uk/LC_MESSAGES/: django.po
(+19 files in other folders)
